# mrrobot

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  init_app.py  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: lint.yml
.run/: Run the bot (debug).run.xml  Test with pytest.run.xml  Test.run.xml
mrrobot/: bot.py  brainly_api.py
mrrobot/api/: __init__.py  brainly_api.py  entities.py
mrrobot/config/: __init__.py  common.py
mrrobot/db/: __init__.py  redis.py  sheets.py
mrrobot/handlers/: __init__.py  error_occured.py  handle_correction_reaction.py  message_deleted_in_todelete.py  message_posted_in_todelete.py  reaction_added_in_antispamers.py  reaction_added_in_help.py  reaction_added_in_moderators.py  reaction_added_in_todelete.py  send_to_antispamers.py  send_to_moderators.py  silent_deletion_reaction_added.py
mrrobot/matchers/: __init__.py
mrrobot/middleware/: __init__.py  fetch_message_data.py  fetch_user_data.py
mrrobot/util/: __init__.py  find_in_text.py  get_brainly_task.py  getenv.py  slack_api.py  time.py  urls.py
test/: test_find_in_text_utils.py  test_get_brainly_task.py  test_getenv.py  test_matchers.py  test_slack_api.py  test_time_utils.py
