[tool.poetry]
name = "mrrobot"
version = "0.2.1"
description = "The community bot for the Znanija.com moderation team in Slack"
authors = ["vlaex <vlaex7@gmail.com>"]
readme = "README.md"
packages = [{include = "mrrobot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2022.7"
gspread = "^5.7.2"
slack-bolt = "^1.16.1"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
sentry-sdk = "^1.12.1"
httpx = {extras = ["http2"], version = "^0.23.3"}
slackblocks = {git = "https://github.com/vlaex/slackblocks.git"}
async-cache = "^1.1.1"
redis = ">=4.2.0rc1"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"